--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
+      <link href="https://fonts.googleapis.com/css?family=Caveat|Cinzel|Fjalla+One|Lobster&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Grenze&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Beth+Ellen|Grenze|Pacifico|Teko&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Lobster&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Cinzel|Fjalla+One|Lobster&display=swap" rel="stylesheet"> 
+      <link href="https://fonts.googleapis.com/css?family=Alegreya|Caveat|Cinzel|Fjalla+One|Kaushan+Script|Lobster&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
